--- a/helm-apps/teleport-cluster/templates/cert.yaml
+++ b/helm-apps/teleport-cluster/templates/cert.yaml
@@ -24,6 +24,7 @@ spec:
   - "anfisa-qa-druid.teleport.forome.dev"
   - "anfisa-demo-druid.teleport.forome.dev"
   - "anfisa-port-druid.teleport.forome.dev"
+  - "anfisa-dev-druid.teleport.forome.dev"
   - "anfisa-test-druid.teleport.forome.dev"
   - "anfisa-scicenter-druid.teleport.forome.dev"
   issuerRef:
