--- a/helm-apps/forome-prometheus/values.yaml
+++ b/helm-apps/forome-prometheus/values.yaml
@@ -199,7 +199,7 @@ kube-prometheus-stack:
 
         honor_labels: true
         metrics_path: '/federate'
-
+        scheme: https
         static_configs:
           - targets:
             - 'prometheus-k8s.openshift-monitoring.svc:9091'
