fix(prom): retantion Gi to GB

--- a/helm-apps/forome-prometheus/values.yaml
+++ b/helm-apps/forome-prometheus/values.yaml
@@ -184,7 +184,7 @@ kube-prometheus-stack:
     enabled: false
   prometheus:
     prometheusSpec:
-      retentionSize: "19Gi"
+      retentionSize: "19GB"
       storageSpec:
         volumeClaimTemplate:
           spec:
